--- a/style.css
+++ b/style.css
@@ -6,12 +6,19 @@ html {
     height: 100%;
 }
 
+body {
+    background: #544676;
+    color: white;
+    text-shadow: 0 0 black;
+}
+
 .circle {
     width: 200px;
     height: 200px;
     background-color: black;
     border-radius: 100%;
     transition: linear all 0.025s;
+    margin-top: 200px;
 }
 
 .container {
@@ -19,13 +26,15 @@ html {
     width: 90%;
     height: 85vh;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
+    flex-flow: column nowrap;
+    justify-content: space-between;
     align-items: center;
     transition: ease-in-out all 0.025s;
     border-radius: 10px;
     margin-bottom: 15px;
     border: 10px solid white;
+    min-width: 800px;
+    min-height: 750px;
 }
 
 .loudness-container {
@@ -33,6 +42,7 @@ html {
     width: 100px;
     height: 20px;
     border: 1px solid black;
+    margin-bottom: 5px;
 }
 
 .loudness {
@@ -48,4 +58,13 @@ html {
     align-items: flex-start;
     padding: 10px;
     border: 1px solid black;
+}
+
+.main {
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
 }
